// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration:: check your phone should render the "you requested too many codes" pages when incorrect code has requested more than 5 times 1`] = `
Object {
  "contentId": "1fef9388-34cd-4ea2-b899-a66b7327d2f7",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your phone should render the "you requested too many codes" pages when incorrect code has requested more than 5 times 2`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your phone should return check your phone page 1`] = `
Object {
  "contentId": "1fef9388-34cd-4ea2-b899-a66b7327d2f7",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your phone should return error when csrf not present 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your phone should return validation error when code entered contains letters 1`] = `
Object {
  "contentId": "1fef9388-34cd-4ea2-b899-a66b7327d2f7",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your phone should return validation error when code is greater than 6 characters 1`] = `
Object {
  "contentId": "1fef9388-34cd-4ea2-b899-a66b7327d2f7",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your phone should return validation error when code is less than 6 characters 1`] = `
Object {
  "contentId": "1fef9388-34cd-4ea2-b899-a66b7327d2f7",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your phone should return validation error when code not entered 1`] = `
Object {
  "contentId": "1fef9388-34cd-4ea2-b899-a66b7327d2f7",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your phone should return validation error when incorrect code entered 1`] = `
Object {
  "contentId": "1fef9388-34cd-4ea2-b899-a66b7327d2f7",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
